--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
@@ -33,3 +33,19 @@
         height: calc(100vh - 225px);
       }
 }
+
+
+.varient{
+    border-radius: 50%;
+    padding:5px;
+    color:white;
+}
+
+.input-icons .varient { 
+    position: absolute; 
+} 
+  
+.input-icons { 
+    width: 100%; 
+    margin-bottom: 10px; 
+} 
