--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
@@ -1,20 +1,64 @@
 .experiment-container{
-    margin: 15px;
     .header-sec{
         background: #F8F9FA;
         border-radius: 4px;
-        .add{
-            padding: 10px 0px 10px 50px;
-            img{
-                margin: 0px 10px;
+        padding: 5px 0px;
+        margin: 22px 30px;
+        align-items: center;       
+        .left-sec{
+            .tab-sec{
+                .tab_title{
+                    color: #202124;
+                    border: 1px solid transparent;
+                    padding: 6px 15px;
+                    border-radius: 4px;                                                   
+                    font-size: 14px;
+                    font-weight: 500;
+                    margin: 0px 0 0 5px;
+                    cursor: pointer;
+                    span{
+                        color: #5F6368;
+                        padding-left: 4px;
+                    }
+                    &.active{                            
+                        background: #FFFFFF;
+                        border: 1px solid #E4E5E7;
+                    }
+                }
+            }
+        }
+        .right-sec{
+            text-align: right;
+            .title{
+                color: #202124;
+                font-weight: 500;
+                font-size: 12px;
+                cursor: pointer;
+                float: right;
+                padding: 0 20px;
+                img{
+                    position: relative;
+                    top: -1px;
+                    margin-right: 6px;
+                }
             }
         }
     }
     .no-experiments{
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: calc(100vh - 200px);
         .title{
             font-style: normal;
             font-weight: 600;
             font-size: 18px;
+            color: #202124;
+            margin-top: 30px;
+            margin-bottom: 6px;
         }
         .dec{
             font-weight: normal;
@@ -23,15 +67,6 @@
             color: #9AA0A6;
         }
     }
-    .centered {
-        width: 400px;
-        margin: 0 auto;
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        height: calc(100vh - 225px);
-      }
 }
 
 
@@ -49,3 +84,89 @@
     width: 100%; 
     margin-bottom: 10px; 
 } 
+
+::ng-deep .addFieldModalPop{
+    .modal-dialog{
+        .modal-content{
+            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1) !important;
+            border-radius: 8px !important;
+            .modal-header{
+                .title{
+                    color: #202124;
+                    font-weight: 500;
+                    font-size: 18px;
+                    line-height: 22px;
+                }
+            }
+            .modal-body{
+                padding: 25px 25px !important;
+                .duration-sec{
+                    padding-left: 5px;
+                    .kr-sg-input-text {
+                        position: relative;
+                        display: inline-block;
+                        width: auto;
+                        input{
+                            background: #FFFFFF;
+                            border: 1px solid #BDC1C6;
+                            box-sizing: border-box;
+                            border-radius: 4px;
+                            width: 102px;
+                            padding: 0 27px;
+                        }
+                        .minus{
+                            position: absolute;
+                            left: 9px;
+                            bottom: 17px;
+                            cursor: pointer;
+                        }
+                        .plus{
+                            position: absolute;
+                            right: 9px;
+                            bottom: 11px;
+                            cursor: pointer;
+                        }
+                    }
+                }
+                .variant-add{
+                    color: #0D6EFD;
+                    font-weight: normal;
+                    font-size: 14px;
+                    line-height: 20px;
+                    display: inline-block;
+                    cursor: pointer;
+                    padding-left: 5px;
+                    img{
+                        margin-right: 10px;
+                    }
+                }
+                .kr-sg-input-text{
+                    position: relative;
+                    &.ifvariant{
+                        .input-text{
+                            padding-left: 35px !important;
+                        }
+                    }                   
+                    .v-name{
+                        background: #7027E5;
+                        border: 1.5px solid #FFFFFF;
+                        display: inline-block;
+                        width: 23px;
+                        height: 23px;
+                        text-align: center;
+                        border-radius: 100%;
+                        color: #FFFFFF;
+                        font-weight: 500;
+                        font-size: 12px;
+                        position: absolute;
+                        left: 10px;
+                        bottom: 6px;
+                    }
+                }
+            }
+        }
+    }
+}
+.pl-pr-5{
+    padding: 0 5px 0 5px;
+}
