--- a/findly-builder/src/app/components/summary/summary.component.scss
+++ b/findly-builder/src/app/components/summary/summary.component.scss
@@ -284,6 +284,12 @@
                                 img{
 
                                 }
+                            }
+                            .center-image{
+                                position: absolute;
+                                left: 50%;
+                                top: 50%;
+                                transform: translate(-50%, -50%);
                             }   
                             .c-title{
                                 color: #5F6368;
