--- a/findly-builder/src/app/components/dashboard/dashboard.component.scss
+++ b/findly-builder/src/app/components/dashboard/dashboard.component.scss
@@ -317,6 +317,17 @@
     .text-center{
         text-align: center!important;
     }
+    .create_new_link{
+        color: #0D6EFD;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 17px;
+        display: inline-block;
+        cursor: pointer;
+        padding: 12px 0px 0 0px;
+        float: right;
+    }   
+    
 }
 
 ::ng-deep perfect-scrollbar .ps--active-y{
